--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+    .container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
@@ -38,6 +43,14 @@ body {
 </style>
 </head>
 <body>
+    <div class="container">
+        <img src="BlacktreeLogo.jpg" alt="boss" style="width:100%;">
+        <div class="bottom-left">Bottom Left</div>
+        <div class="top-left">Top Left</div>
+        <div class="top-right">Top Right</div>
+        <div class="bottom-right">Bottom Right</div>
+        <div class="centered">Centered</div>
+      </div>
 <div class="header">
     <h1>If we cant make you look good, you're ugly</h1>
     <p>2227 Fern St, San Diego, CA 92104 #(619)-731-4305</p>
