--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body {
 </head>
 <body>
     <div class="container">
-        <img src="BlacktreeLogo.jpg" alt="boss" style="width:100%;">
+        <img src="BlacktreeLogo.jpg" alt="boss" style="width:100%; height:50%;">
         <div class="bottom-left">Bottom Left</div>
         <div class="top-left">Top Left</div>
         <div class="top-right">Top Right</div>
