--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ body {
   margin: 0;
 }
 .header {
-  padding: 30px;
+  padding: 10px;
   text-align: center;
-  background: #1abc9c;
+  background: #8F150B;
   color: white;
 }
 .header h1 {
@@ -44,17 +44,13 @@ body {
 </head>
 <body>
     <div class="container">
-        <img src="BlacktreeLogo.jpg" alt="boss" style="width:100%; height:300px;">
+        <img src="BlacktreeLogo.jpg" alt="boss" style="width:100%; height:500px;"> </img>
         <div class="bottom-left">Bottom Left</div>
         <div class="top-left">Top Left</div>
         <div class="top-right">Top Right</div>
         <div class="bottom-right">Bottom Right</div>
         <div class="centered">Centered</div>
       </div>
-<div class="header">
-    <h1>If we cant make you look good, you're ugly</h1>
-    <p>2227 Fern St, San Diego, CA 92104 #(619)-731-4305</p>
-<div>
 <div class=navbar>
  <a href="#">Barbers</a>
  <a href="#">History</a>
