--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>The Inglrious Blacktree Barberia</title>
+<title>The Shadow Gallery</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -19,6 +19,7 @@ body {
   text-align: center;
   background: #8F150B;
   color: white;
+  font-family: "Lucida Handwriting","Brush Script MT",cursive; 
 }
 .header h1 {
   font-size: 40px;
@@ -43,6 +44,7 @@ body {
 </style>
 </head>
 <body>
+    <div class="header">The Shadow Gallery</div>
     <div class="container">
         <img src="BlacktreeLogo.jpg" alt="boss" style="width:90%; height:575px;"> </img>
         <div class="bottom-left">Bottom Left</div>
