--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@ body {
   margin: 0;
 }
 .header {
-  padding: 10px;
+  padding: 20px;
   text-align: center;
   background: #8F150B;
   color: white;
-  font-family: "Lucida Handwriting","Brush Script MT",cursive; 
+  font-family: "Lucida Handwriting","Brush Script MT",cursive;
+  font-size:20px
 }
 .header h1 {
   font-size: 40px;
