--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@ body {
   text-align: center;
   background: #8F150B;
   color: white;
-  font-family: "Lucida Handwriting","Brush Script MT",cursive;
-  font-size:40px
+  font-family: "Lucida Handwriting",cursive;
+  font-size:40px;
 }
 .header h1 {
   font-size: 40px;
 }
-.navbar {
+.topnavbar {
   overflow: hidden;
   background-color: #333;
 }
-.navbar a {
+.topnavbar a {
   float: left;
   display: block;
   color: white;
@@ -38,26 +38,18 @@ body {
   text-decoration: none;
 }
 /* Change color on hover */
-.navbar a:hover {
+.topnavbar a:hover {
   background-color: #ddd;
   color: black;
 }
 </style>
 </head>
 <body>
-    <div class="header">The Shadow Gallery</div>
-    <div class="container">
-        <img src="BlacktreeLogo.jpg" alt="boss" style="width:90%; height:575px;"> </img>
-        <div class="bottom-left">Bottom Left</div>
-        <div class="top-left">Top Left</div>
-        <div class="top-right">Top Right</div>
-        <div class="bottom-right">Bottom Right</div>
-        <div class="centered">Centered</div>
-    </div>
-<div class=navbar>
- <a href="#">Barbers</a>
- <a href="#">History</a>
- <a href="#">Book a cut</a>
+  <div class="header">The Shadow Gallery</div>
+  <div class=topnavbar>
+  <a href="#">Furniture</a>
+  <a href="#">History</a>
+  <a href="#">Speccial Request</a>
 <div>
 </body>
 </html>
