--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@ body {
 .header h1 {
   font-size: 40px;
 }
-.topnavbar {
+#topnavbar {
   overflow: hidden;
   background-color: #333;
 }
-.topnavbar a {
+#topnavbar a {
   float: left;
   display: block;
   color: white;
@@ -38,18 +38,37 @@ body {
   text-decoration: none;
 }
 /* Change color on hover */
-.topnavbar a:hover {
+#topnavbar a:hover {
   background-color: #ddd;
   color: black;
+}
+
+#navbar a.active {
+  background-color: #04aa6d;
+  color: white;
+}
+
+.content {
+  padding: 16px;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky + .content {
+  padding-top: 60px;
 }
 </style>
 </head>
 <body>
-  <div class="header">The Shadow Gallery</div>
-  <div class=topnavbar>
-  <a href="#">Furniture</a>
-  <a href="#">History</a>
-  <a href="#">Speccial Request</a>
+<div class="header">The Shadow Gallery</div>
+<div id="topnavbar">
+  <a class="active" href="javascript:void(0)">Furniture</a>
+  <a href="javascript:void(0)">History</a>
+  <a href="javascript:void(0)">Speccial Request</a>
 <div>
 </body>
 </html>
