--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body {
 <div id="topnavbar">
   <a class="active" href="javascript:void(0)">Furniture</a>
   <a href="javascript:void(0)">History</a>
-  <a href="javascript:void(0)">Speccial Request</a>
+  <a href="javascript:void(0)">Special Request</a>
 <div>
 </body>
 </html>
