--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
 .header {
   padding: 20px;
   text-align: center;
-  background: #8F150B;
+  background: #000000;
   color: white;
   font-family: "Lucida Handwriting",cursive;
   font-size:40px;
@@ -27,7 +27,7 @@ body {
 }
 #topnavbar {
   overflow: hidden;
-  background-color: #000000;
+  background-color: #575050;
 }
 #topnavbar a {
   float: left;
