--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body {
 </style>
 </head>
 <body>
-<div class="header">The Shadow Gallery</div>
+<div class="header">THE SHADOW GALLERY</div>
 <div id="topnavbar">
   <a class="active" href="javascript:void(0)">Furniture</a>
   <a href="javascript:void(0)">History</a>
