--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body {
 /* Change color on hover */
 #topnavbar a:hover {
   background-color: #ddd;
-  color: black;
+  color: rgb(32, 30, 30);
 }
 
 #navbar a.active {
